tests/machine/x/fortran/two-sum.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:7:18:

    7 |   print *, result(0)
      |                  1
Error: Syntax error in PRINT statement at (1)
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:8:18:

    8 |   print *, result(1)
      |                  1
Error: Syntax error in PRINT statement at (1)
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:10:30:

   10 |   integer function twoSum(nums,target)
      |                              1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘nums’ at (1)
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:14:13:

   14 |     n = size(nums)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:18:10:

   18 |           twoSum = (/i,j/)
      |          1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:23:4:

   23 |     twoSum = (/-1,-1/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/workspace/mochi/tests/machine/x/fortran/two-sum.f90:6:18:

    6 |   result = twoSum((/2,7,11,15/),9)
      |                  1
Error: Rank mismatch in argument ‘nums’ at (1) (scalar and rank-1)

